add new endpoints for ken and fix stuff
